--- a/views/weatherModule.ejs
+++ b/views/weatherModule.ejs
@@ -7,36 +7,34 @@
     <title>Weather Forecast - Eco Travel Planner</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css"> <!--css for generally-->
-    <link rel="stylesheet" href="css/weather.css">
-    <link rel="stylesheet" href="css/dashboard.css"> <!--css for dashboard-->
-     <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="/css/style.css"> <!--css for generally-->
+    <link rel="stylesheet" href="/css/weather.css">
+    <link rel="stylesheet" href="/css/dashboard.css"> <!--css for dashboard-->
+    <link rel="stylesheet" href="/css/profile.css">
 </head>
 
 <body>
     <!-- Main Side Bar -->
     <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
     <div class="mainsidebar" id="mainsidebar">
-        <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
-        <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
-        <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel
+        <a href="/profileManagement"><img src="/icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
+        <a href="/"><img src="/icons/homeIcon.png" alt="Home" class="icon"> Home</a>
+        <a href="/travelPlanner"><img src="/icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel
             Planner</a>
-        <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
-        <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
-        <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"
+        <a href="/weatherModule"><img src="/icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
+        <a href="/carbonFootprint"><img src="/icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
+        <a href="/login" onclick="return confirmLogout()"><img src="/icons/logout.png" alt="Logout"
                 class="icon">Logout</a>
     </div>
 
     <div class="wrapper">
-        <header class="main-header">
-            <h1 class="app-title">TerraGo</h1>
-        </header>
+        <%- include('partials/header') %>
 
         <!--Navigation bar-->
         <nav class="dashboard-nav-bar">
-            <a href="index.html">Home</a> |
-            <a href="profileManagement.html">Profile</a> |
-            <a href="login.html" onclick="return confirmLogout()">Logout</a>
+            <a href="/">Home</a> |
+            <a href="/profileManagement">Profile</a> |
+            <a href="/login" onclick="return confirmLogout()">Logout</a>
         </nav>
         <div class="container">
 
@@ -128,12 +126,10 @@
             integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ=="
             data-cf-beacon='{"rayId":"93dbf461da54e58c","version":"2025.4.0-1-g37f21b1","r":1,"token":"e029c4a3c1704e88ab37ce2409fd73de","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}'
             crossorigin="anonymous"></script>
-        <script src="js/weather.js"></script>
+        <script src="/js/weather.js"></script>
 </body>
 
-<!--Footer for copywrite-->
-<footer>
-    <p>&copy; Group 8 – OCC 3 Web Programming</p>
-</footer>
+<!--Footer for copyright-->
+<%- include('partials/footer') %>
 
 </html>
