--- a/views/weatherModule.ejs
+++ b/views/weatherModule.ejs
@@ -30,103 +30,103 @@
     <div class="wrapper">
         <%- include('partials/header') %>
 
-        <!--Navigation bar-->
-        <nav class="dashboard-nav-bar">
-            <a href="/">Home</a> |
-            <a href="/profileManagement">Profile</a> |
-            <a href="/login" onclick="return confirmLogout()">Logout</a>
-        </nav>
-        <div class="container">
+            <!--Navigation bar-->
+            <nav class="dashboard-nav-bar">
+                <a href="/">Home</a> |
+                <a href="/vprofileManagement">Profile</a> |
+                <a href="/login" onclick="return confirmLogout()">Logout</a>
+            </nav>
+            <div class="container">
 
-            <div class="weather-data">
+                <div class="weather-data">
 
-                <!--current weather forecast-->
-                <div class="current-weather">
-                    <div class="details">
-                        <div class="location-text">
-                            <h2 class="city-name">_______</h2>
-                            <h2 class="date">______</h2>
+                    <!--current weather forecast-->
+                    <div class="current-weather">
+                        <div class="details">
+                            <div class="location-text">
+                                <h2 class="city-name">_______</h2>
+                                <h2 class="date">______</h2>
+                            </div>
+                            <h6>Temperature : __°C</h6>
+                            <h6>Wind : __ M/S</h6>
+                            <h6>Humidity : __%</h6>
                         </div>
-                        <h6>Temperature : __°C</h6>
-                        <h6>Wind : __ M/S</h6>
-                        <h6>Humidity : __%</h6>
+                    </div>
+
+                    <div class="days-forecast">
+
+                        <!--5 days weather forecast-->
+                        <h4>5-Day Forecast</h4>
+
+                        <ul class="weather-cards">
+
+                            <li class="card">
+                                <h3>( ______ )</h3>
+                                <h6>Temp : __C</h6>
+                                <h6>Wind : __ M/S</h6>
+                                <h6>Humidity : __%</h6>
+                            </li>
+
+                            <li class="card">
+                                <h3>( ______ )</h3>
+                                <h6>Temp : __C</h6>
+                                <h6>Wind : __ M/S</h6>
+                                <h6>Humidity : __%</h6>
+                            </li>
+
+                            <li class="card">
+                                <h3>( ______ )</h3>
+                                <h6>Temp: __C</h6>
+                                <h6>Wind: __ M/S</h6>
+                                <h6>Humidity: __%</h6>
+                            </li>
+
+                            <li class="card">
+                                <h3>( ______ )</h3>
+                                <h6>Temp : __C</h6>
+                                <h6>Wind : __ M/S</h6>
+                                <h6>Humidity : __%</h6>
+                            </li>
+
+                            <li class="card">
+                                <h3>( ______ )</h3>
+                                <h6>Temp : __C</h6>
+                                <h6>Wind : __ M/S</h6>
+                                <h6>Humidity : __%</h6>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
-                <div class="days-forecast">
+                <div class="weather-input">
 
-                    <!--5 days weather forecast-->
-                    <h4>5-Day Forecast</h4>
+                    <!--search bar-->
+                    <h2>Enter a City Name</h2>
+                    <input class="city-input" type="text" placeholder="Search City">
+                    <button class="search-btn">Search</button>
+                    <div class="separator"></div>
+                    <button class="location-btn">Use Current Location</button>
 
-                    <ul class="weather-cards">
 
-                        <li class="card">
-                            <h3>( ______ )</h3>
-                            <h6>Temp : __C</h6>
-                            <h6>Wind : __ M/S</h6>
-                            <h6>Humidity : __%</h6>
-                        </li>
-
-                        <li class="card">
-                            <h3>( ______ )</h3>
-                            <h6>Temp : __C</h6>
-                            <h6>Wind : __ M/S</h6>
-                            <h6>Humidity : __%</h6>
-                        </li>
-
-                        <li class="card">
-                            <h3>( ______ )</h3>
-                            <h6>Temp: __C</h6>
-                            <h6>Wind: __ M/S</h6>
-                            <h6>Humidity: __%</h6>
-                        </li>
-
-                        <li class="card">
-                            <h3>( ______ )</h3>
-                            <h6>Temp : __C</h6>
-                            <h6>Wind : __ M/S</h6>
-                            <h6>Humidity : __%</h6>
-                        </li>
-
-                        <li class="card">
-                            <h3>( ______ )</h3>
-                            <h6>Temp : __C</h6>
-                            <h6>Wind : __ M/S</h6>
-                            <h6>Humidity : __%</h6>
-                        </li>
-                    </ul>
                 </div>
-            </div>
-
-            <div class="weather-input">
-
-                <!--search bar-->
-                <h2>Enter a City Name</h2>
-                <input class="city-input" type="text" placeholder="Search City">
-                <button class="search-btn">Search</button>
-                <div class="separator"></div>
-                <button class="location-btn">Use Current Location</button>
-
 
             </div>
 
-        </div>
+            <script>
+                function confirmLogout() {
+                    return confirm("Are you sure you want to logout?")
+                }
+                function toggleSidebar() {
+                    document.getElementById("mainsidebar").classList.toggle("open");
+                }
+            </script>
 
-        <script>
-            function confirmLogout() {
-                return confirm("Are you sure you want to logout?")
-            }
-            function toggleSidebar() {
-                document.getElementById("mainsidebar").classList.toggle("open");
-            }
-        </script>
-
-        <script defer
-            src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015"
-            integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ=="
-            data-cf-beacon='{"rayId":"93dbf461da54e58c","version":"2025.4.0-1-g37f21b1","r":1,"token":"e029c4a3c1704e88ab37ce2409fd73de","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}'
-            crossorigin="anonymous"></script>
-        <script src="/js/weather.js"></script>
+            <script defer
+                src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015"
+                integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ=="
+                data-cf-beacon='{"rayId":"93dbf461da54e58c","version":"2025.4.0-1-g37f21b1","r":1,"token":"e029c4a3c1704e88ab37ce2409fd73de","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}'
+                crossorigin="anonymous"></script>
+            <script src="/js/weather.js"></script>
 </body>
 
 <!--Footer for copyright-->
