--- a/views/profileManagement.ejs
+++ b/views/profileManagement.ejs
@@ -88,7 +88,18 @@
                   <div class="info-labels">
                     <p><strong>Email</strong><br>yourname@gmail.com</p>
                   </div>
-                  <button class="edit-btn">Change Email</button>
+                  <button class="edit-btn" id="changeEmailBtn">Change Email</button>
+                </div>
+                <div id="emailModal" class="modal">
+                  <div class="modal-content">
+                    <span class="close-btn" id="closeEmailModal">&times;</span>
+                    <h2>Change Email</h2>
+                    <form>
+                      <label>New Email</label>
+                      <input type="email" required><br>
+                      <button type="submit">Update Email</button>
+                    </form>
+                  </div>
                 </div>
 
                 <div class="info-row">
@@ -99,7 +110,7 @@
                 </div>
                 <div id="passwordModal" class="modal">
                   <div class="modal-content">
-                    <span class="close-btn" id="closeModal">&times;</span>
+                    <span class="close-btn" id="closePasswordModal">&times;</span>
                     <h2>Change Password</h2>
                     <form>
                       <label>Current Password</label>
