--- a/views/profileManagement.ejs
+++ b/views/profileManagement.ejs
@@ -30,8 +30,8 @@
       <!-- Main Side Bar -->
       <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
       <div class="mainsidebar" id="mainsidebar">
-        <a href="/views/profileManagement.ejs"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
-        <a href="/index"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
+        <a href="profileManagement"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
+        <a href="/"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
         <a href="/travelPlanner"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
         <a href="/weatherModule"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
         <a href="/carbonFootprint"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
