--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Lato', sans-serif;
-  background-color: #faf9f6;
+  background-color: #fbebc5;
   display: flex;
   flex-direction: column;
   /* Stack element vertically */
@@ -100,7 +100,7 @@ body {
 footer {
   background-color: #4a5a42;
   text-align: center;
-  color:#ffffff;
+  color: #ffffff;
   padding: 10px 0;
   font-size: 0.9rem;
   height: auto;
@@ -173,7 +173,7 @@ header {
   padding: 20px;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
-  width:80%;
+  width: 80%;
   max-width: 90%;
   margin: 0 auto;
 }
@@ -414,7 +414,7 @@ h3 {
 }
 
 .btn-carbon-footprint {
-    background-color: #a4816b;
-    border-color: #a4816b;
-    color: white;
+  background-color: #a4816b;
+  border-color: #a4816b;
+  color: white;
 }
