--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Lato', sans-serif;
-  background-color: #fbebc5;
+  background-color: #faf9f6;
   display: flex;
   flex-direction: column;
   /* Stack element vertically */
