--- a/views/profileManagement.ejs
+++ b/views/profileManagement.ejs
@@ -489,6 +489,17 @@
         </div>
       </main>
 
+      <form id="deleteForm" action="/deleteProfile" method="POST" style="display: none;"></form>
+
+      <script>
+  function confirmDelete() {
+    const confirmed = confirm("Are you sure you want to delete your account? This action is permanent.");
+    if (confirmed) {
+      document.getElementById('deleteForm').submit();
+    }
+  }
+</script>
+
 
   </div>
 
