--- a/views/profileManagement.ejs
+++ b/views/profileManagement.ejs
@@ -125,13 +125,13 @@
                   <div class="modal-content">
                     <span class="close-btn" id="closePasswordModal">&times;</span>
                     <h2>Change Password</h2>
-                    <form>
+                    <form action="/changePassword" method="POST">
                       <label>Current Password</label>
-                      <input type="password" required><br>
+                      <input type="password" name="currentPassword" required><br>
                       <label>New Password</label>
-                      <input type="password" required><br>
+                      <input type="password" name="newPassword" required><br>
                       <label>Confirm New Password</label>
-                      <input type="password" required><br>
+                      <input type="password" name="confirmPassword" required><br>
                       <button type="submit">Update Password</button>
                     </form>
                   </div>
