db for user review added

--- a/views/profileManagement.ejs
+++ b/views/profileManagement.ejs
@@ -233,7 +233,7 @@
                   <div class="input-box">
                     <input type="text" id="concern" placeholder="Write here..." />
                   </div>
-                  <button class="edit-btn" id="submitReviewBtn">Enter</button>
+                  <button class="edit-btn" onclick="submitReview()">Enter</button>
                 </div>
               </div>
 
