add accomodation API

--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -273,7 +273,9 @@
     </script>
 
     <script src="/js/categoryHandlerTravel.js"></script>
-    <script src="/js/travelActivities.js"></script> <!-- Load by default -->
+    <script src="/js/travelActivities.js"></script> 
+    <script src="/js/travelAccom.js"></script> 
+    <!-- Load by default -->
 
     <!-- <script>
       document.addEventListener('DOMContentLoaded', function() {
