add phone number

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,6 +33,9 @@
                         <label for="password">Password</label>
                         <input type="password" id="password" name="password" required />
 
+                        <label for="phoneNum">Phone Number</label>
+                        <input type="phoneNum" id="phoneNum" name="phoneNum" required />
+
                         <!--Bootstrap element-->
                         <label for="profilePic">Profile Picture</label>
                         <input class="form-control" type="file" id="profilePic" name="profilePic" accept="image/*" />
