--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -38,7 +38,7 @@
     </div>
 
     <section class="search-section">
-      <input type="text" class="search-bar"
+      <input type="text" id="search-bar" class="search-bar"
         placeholder="Search eco-friendly stays, rides, or activities in Kuala Lumpur..." />
 
       <div class="filters">
