--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,7 @@
                         <input type="password" id="password" name="password" required />
 
                         <label for="phoneNum">Phone Number</label>
-                        <input type="phoneNum" id="phoneNum" name="phoneNum" required />
+                        <input type="tel" id="phoneNum" name="phoneNum" required />
 
                         <!--Bootstrap element-->
                         <label for="profilePic">Profile Picture</label>
