trannsport's filter dropdown

--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -46,7 +46,11 @@
           <option value="Activities">Activities</option>
           <option value="Accommodation">Accommodation</option>
           <option value="Transport">Transport</option>
-
+        </select>
+        <select id="transport-type-select" style="display: none;">
+          <option value="All">All</option>
+          <option value="Public">Public Transport</option>
+          <option value="Private & Shared">Private & Shared Transport</option>
         </select>
         <input type="date" />
       </div>
