search bar completed

--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -279,6 +279,7 @@
     <script src="/js/categoryHandlerTravel.js"></script>
     <script src="/js/travelActivities.js"></script> 
     <script src="/js/travelAccom.js"></script> 
+    <script src="/js/travelFeatures.js"></script> 
     <!-- Load by default -->
 
     <!-- <script>
