--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -280,6 +280,7 @@
     <script src="/js/travelActivities.js"></script> 
     <script src="/js/travelAccom.js"></script> 
     <script src="/js/travelFeatures.js"></script> 
+    <script src="/js/itinerary.js"></script>
     <!-- Load by default -->
 
     <!-- <script>
