--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -183,7 +183,7 @@
           </div>
           
           <div class="itinerary-actions">
-            <button class="optimize-btn">Optimize Eco Score</button>
+            <button class="delete-selected-day-btn">Delete Day</button>
             <button class="add-day-btn">+ Add Day</button>
           </div>
         </div>
