--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -192,7 +192,7 @@
         <div class="favorites-container">
           <h3 class="section-title">Your Favorites</h3>
           <div class="favorites-list">
-            <div class="favorite-item">
+            <!-- <div class="favorite-item">
               <div class="favorite-content">
                 <img src="/assets/images/aquaria_klcc.avif" alt="aquaria" class="favorite-image">
                 <div class="favorite-details">
@@ -251,7 +251,7 @@
                 <button class="add-to-itinerary-btn" title="Add to itinerary">+ Add</button>
                 <button class="remove-favorite-btn" title="Remove favorite">×</button>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -280,6 +280,7 @@
     <script src="/js/travelActivities.js"></script> 
     <script src="/js/travelAccom.js"></script> 
     <script src="/js/travelFeatures.js"></script> 
+    <script src="/js/favourite.js"></script> 
     <script src="/js/itinerary.js"></script>
     <!-- Load by default -->
 
