accomodation in travel done

--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -279,7 +279,7 @@
     <script src="/js/categoryHandlerTravel.js"></script>
     <script src="/js/travelActivities.js"></script> 
     <script src="/js/travelAccom.js"></script> 
-    <script src="/js/travelFeatures.js"></script> 
+   <!--<script src="/js/travelFeatures.js"></script>  -->
     <script src="/js/favourite.js"></script> 
     <script src="/js/itinerary.js"></script>
     <!-- Load by default -->
