delete date in travel page

--- a/views/travelPlanner.ejs
+++ b/views/travelPlanner.ejs
@@ -52,7 +52,7 @@
           <option value="Public">Public Transport</option>
           <option value="Private & Shared">Private & Shared Transport</option>
         </select>
-        <input type="date" />
+        <!-- <input type="date" /> -->
       </div>
 
       <div class="carousel-container">
